@@ -1,3 +1,7 @@
+2006-11-01  Iain Holmes  <iain@gnome.org>
+
+	* src/ImageLoader.cs: Catch bad urls from Priit
+
 2006-10-24  Iain holmes  <iain@gnome.org>
 
 	* liblast-exit/player.c: Patch to stop player on EOS from Priit
